crates/hydracache-db/tests/policy/fail_unknown_preset.stderr
error: unsupported query_cache_policy preset
 --> tests/policy/fail_unknown_preset.rs:5:18
  |
5 |         preset = catalog,
  |                  ^^^^^^^
